# sudo-uri-resolver

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
fuseki/: Dockerfile  config.ttl
uri_resolver/: __init__.py  backend.py  main.py  models.py  services.py  settings.py
uri_resolver/static/: doc.css  home.css  not-found.css
uri_resolver/static/js/: adam-dots-data.js
uri_resolver/templates/: _footer.html  _head.html  describe.html  graph.html  home.html  not_found.html  rdf.html  resource.html
